Making TSE observations

--- a/index.html
+++ b/index.html
@@ -16,38 +16,47 @@
             <nav>
                 <ul class="searchbar">
                     <li>
-                        <i class="fa fa-apple fa-2x" aria-hidden="true"></i>
+                        <a href="#">
+                            <i class="fa fa-apple fa-2x" aria-hidden="true"></i>
+
+                        </a>
 
                     </li>
 
                     <li>
-                        Store
+                        <a href="#">Store</a>
                     </li>
 
                     <li>
-                        Mac
+                        <a href="#">Mac</a>
                     </li>
 
                     <li>
-                        Ipod
+                        <a href="#">iPhone</a>
                     </li>
 
                     <li>
-                        iPhone
+                        <a href="#">iPhone</a>
                     </li>
 
                     <li>
-                        iPad
+                        <a href="#">iPad</a>
                     </li>
 
                     <li>
-                        iTunes
+                        <a href="#">iTunes</a>
                     </li>
                     <li>
+                        <a href="#">Support</a>
+                    </li>
+                    <li>
+
                         <span>
                         <i class="fa fa-search whiteicon" aria-hidden="true"></i>
                         <input class="graybox" type="text">
+
                     </span>
+
 
 
                     </li>
