Fixed TSE sectionimagesclickable and margin in line height.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                     <li>
 
                         <span>
-                        <i class="fa fa-search whiteicon" aria-hidden="true"></i>
-                        <input class="graybox" type="text">
+                            <i class="fa fa-search whiteicon" aria-hidden="true"></i>
+                            <input class="graybox" type="text">
 
-                    </span>
+                        </span>
 
 
 
@@ -78,24 +78,32 @@
         <div id='slider'>
 
 
+            <a href="#">
+                <img src="https://archive.fo/UW4oR/4199f096e33e638ba9aeb6c6dec3a3e64794d02c.jpg " alt="first.png ">
+            </a>
 
-            <img src="https://archive.fo/UW4oR/4199f096e33e638ba9aeb6c6dec3a3e64794d02c.jpg " alt="first.png ">
+            <a href="#">
 
+                <img src="https://archive.fo/UW4oR/6032fe46fd16493ddda4e90ae45725962fc826b9.jpg " alt="second.png ">
+            </a>
 
-            <img src="https://archive.fo/UW4oR/6032fe46fd16493ddda4e90ae45725962fc826b9.jpg " alt="second.png ">
+            <a href="#">
 
+                <img src="https://archive.fo/UW4oR/307a4ef1971d63d523c362cc3e49f923549fcefc.jpg " alt="third.png ">
+            </a>
 
-            <img src="https://archive.fo/UW4oR/307a4ef1971d63d523c362cc3e49f923549fcefc.jpg " alt="third.png ">
+            <a href="#">
 
-
-            <img src="https://archive.fo/UW4oR/ec67ffeb084d1b9c83687205641697baa4122bee.jpg " alt="fourht.png ">
-
+                <img src="https://archive.fo/UW4oR/ec67ffeb084d1b9c83687205641697baa4122bee.jpg " alt="fourht.png ">
+            </a>
 
         </div>
 
         <footer>
             <div class="aligning1 ">
-                <p>Shop the <span> <a href="# "> Apple Online Store </a> </span>(1-800-MY-APPLE), visit an <span> <a href="# "> Retail Store</a></span> , or find a <span> <a href="# "> reseller </a></span>.</p>
+                <p>Shop the <span> <a href="# "> Apple Online Store </a> </span>(1-800-MY-APPLE), visit an <span> <a
+                            href="# "> Retail Store</a></span> , or find a <span> <a href="# "> reseller </a></span>.
+                </p>
                 <ul>
                     <li> <a href="# "> Site map</a> </li>
                     <li> <a href="# "> Hot news </a> </li>
